--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+   @apply bg-blue-50 text-slate-800;
+   color: rgb(var(--foreground-rgb));
+   background: bg-gray-100;
+   line-height: 1;
+}
+
+main {
+   @apply min-h-screen p-4 pb-20;
+}
+
+@layer utilities {
+   .text-balance {
+      text-wrap: balance;
+   }
+}
+
+h1 {
+   @apply text-3xl font-bold;
+}
+
+h2 {
+   @apply text-2xl font-semibold;
+}
+
+h3 {
+   @apply text-xl font-semibold;
+}
+
+h4 {
+   @apply text-lg font-medium;
+}
+
+h5 {
+   @apply text-base font-medium;
+}
+
+h6 {
+   @apply text-sm font-medium;
+}
+
+.card {
+   @apply bg-white shadow rounded p-3;
 }
