--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,6 @@
 
 body {
    @apply text-slate-800;
-   color: rgb(var(--foreground-rgb));
-   background: bg-gray-100;
    line-height: 1;
 }
 
@@ -45,4 +43,8 @@ h6 {
 
 .card {
    @apply bg-white shadow rounded p-3;
+}
+
+.middle-section {
+   @apply w-3/4 mx-auto mt-10 flex flex-col gap-8;
 }
